# ostraca-cli

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: Nexus Project Specification & AI Prompt.md  Nexus The PARA-Method AI Notebook.md  System Prompt Nexus CLI & MCP Server.md  documentation.md  quickstart.md
nexus_cli/: config.py  main.py  tui.py
ostraca_cli/: db.py  frontmatter.py  main.py
tests/: test_db.py  test_frontmatter.py  test_main.py  test_todo.py
website/: index.html  metadata.json  package-lock.json  package.json
website/src/: App.tsx
