[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-cli"
version = "0.1.0"
description = "Terminal-based personal knowledge base enforcing the PARA method"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=0.1.0",
    "shortuuid>=1.0.0"
]

[project.scripts]
nexus = "nexus_cli.main:app"
