[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ostraca-cli"
version = "0.1.0"
description = "A terminal-based personal knowledge base enforcing the PARA method."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = ["typer[all]", "rich", "mcp", "shortuuid"]

[tool.setuptools]
packages = ["ostraca_cli"]

[project.scripts]
ost = "ostraca_cli.main:app"
